# downtown-cab-co

./: .gitignore  README.md  docker-compose.yml  inference.compose.v0.yml  inference.compose.v1.yml  main.py  mlflow.compose.v0.yml  mlflow.compose.v1.yml  model_b.pkl  pyproject.toml  pytest.ini  testing.dvc  training.compose.v1.yml  training.dvc
.dvc/: config
.github/workflows/: 1-continuous-integration.yml  2-continuous-delivery.yml  3-continuous-staging.yml  4-continuous-deployment.yml  client.ovpn  continuous_integration.yml  deploy.v1.yml  deploy.yml  scheduled-validation.yml  test.yml
.github/workflows/deprecated/: client.ovpn  deploy.v0.yml  test.yml
data/: one_time_data_pull.sh
model-promotion/: promote_model.py
qweq/0/: meta.yaml
qweq/644066286324898897/: meta.yaml
src/: data_loader.py
src/api/: .env.example  Dockerfile  main.py  pyproject.toml
src/inference_api/: Dockerfile  config.py  main.py  pyproject.toml
src/mlflow-server/: Dockerfile  mlflow-entrypoint.sh
src/serving/: pyproject.toml
src/training/: pyproject.toml
src/training_api/: Dockerfile  config.py  main.py  pyproject.toml  test.py  train.py
src/training_api/data/: downloader.py  loader.py  processer.py
src/training_api/routes/: health.py
test/0/: meta.yaml
test/856939831312507418/: meta.yaml
tests/: README.md  __init__.py  conftest.py  test_data_loader.py  test_processer.py
tests/inference_api/: __init__.py  test_main.py
tests/test_e2e/: e2e_inference.py
tests/test_training/: test_main.py
tests/training_api/: __init__.py  test_config.py  test_main.py
(+25 files in other folders)
