[project]
name = "downtown-cab-co"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dvc[gdrive,s3]>=3.63.0",
    "mlflow>=3.5.1",
    "fastapi>=0.120.0",
    "uvicorn>=0.38.0",
    "river>=0.22.0",
    "ruff>=0.14.4",
    "mypy>=1.18.2",
]

[tool.uv.workspace]
members = [
    "src/inference_api",
]

