[project]
name = "training_api"
version = "0.1.0"
description = "API that trains models using mlflow"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "holidays>=0.86",
    "lightgbm>=4.6.0",
    "mlflow>=3.5.1",
    "numpy>=2.3.4",
    "pandas>=2.2",
    "parquet>=1.3.1",
    "river>=0.22.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
